--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -5,7 +5,8 @@ Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup =
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Eine Stadt gründen!\nWähle den Siedler (Flaggensymbol) > Klicke auf 'Stadt gründen' (unten links). 
 Enter the city screen!\nClick the city button twice = Öffne den Stadtbildschirm!\n Klicke zweimal den Stadtknopf.
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Wähle eine Technologie zum Erforschen!\nKlicke auf den Tech-Button (grünlich, oben links) > \n wähle Technologie > klicke auf 'Forschung' (unten rechts). 
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Wähle eine Konstruktion!\nÖffne den Stadtbildschirm > Klicke auf eine Einheit oder ein Gebäude (linke Seite) 
+ # Requires translation!
+Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = 
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Beende eine Runde!\nGehe durch die Einheiten mit 'Nächste Einheit' > Klicke auf 'Nächste Runde'.
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Weise bearbeitete Felder neu zu!\nÖffne den Stadtbildschirm > klicke auf das zugewiesene (grüne) Feld, um es zu entfernen > \n klicke auf ein nicht zugewiesenes Feld, um die Bevölkerungszahl zuzuweisen.
 Meet another civilization!\nExplore the map until you encounter another civilization! = Triff eine andere Zivilisation!\n Erkunde die Karte, bis du einer anderen Zivilisation begegnest! 
@@ -298,6 +299,19 @@ Requires a [buildingName] in all cities = Benötigt das Gebäude [buildingName] 
 Requires a [buildingName] in this city = Benötigt das Gebäude [buildingName] in dieser Stadt
 Requires [resource] = Benötigt [resource]
 Required tech: [requiredTech] = Benötigt Technologie: [requiredTech]
+
+ # Requires translation!
+Current construction = 
+ # Requires translation!
+Construction queue = 
+ # Requires translation!
+Pick a construction = 
+ # Requires translation!
+Queue empty = 
+ # Requires translation!
+Add to queue = 
+ # Requires translation!
+Remove from queue = 
 
 Diplomacy = Diplomatie
 War = Krieg
