--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -5,7 +5,8 @@ Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup =
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Dirikan sebuah kota!\nPilih Penetap (unit dengan bendera) > Klik tombol 'temukan kota' (pojok kiri bawah) 
 Enter the city screen!\nClick the city button twice = Masuk ke tampilan kota!\nKlik tombol kota dua kali
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Pilih sebuah teknologi untuk riset!\nKlik tombol teknologi (warna hijau, pojok kiri atas) > \n pilih teknologi > klik 'Meneliti' (pojok kanan bawah)
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Bangun sebuah bangunan!\nMasuk ke tampilan kota > Klik ke sebuah unit atau bangunan (sebelah kiri)
+ # Requires translation!
+Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = 
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Lewati satu giliran!\nMelewati unit dengan tombol 'Unit selanjutnya' > Klik 'Giliran selanjutnya'
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Kelola ulang daerah!\nMasuk ke tampilan kota > tekan daerah yang dikelola (warna hijau) untuk berhenti mengelola> \n klik sebuah daerah yang tidak dikelola
 Meet another civilization!\nExplore the map until you encounter another civilization! = Bertemu peradaban lain!\nMenjelajahi peta sampai bertemu dengan peradaban yang lain!
@@ -307,6 +308,19 @@ Requires a [buildingName] in all cities = Membutuhlan [buildingName] di semua ko
 Requires a [buildingName] in this city = Membutuhkan [buildingName] di kota ini
 Requires [resource] = Membutuhkan [resource]
 Required tech: [requiredTech] = Membutuhkab teknologi: [requiredTech]
+
+ # Requires translation!
+Current construction = 
+ # Requires translation!
+Construction queue = 
+ # Requires translation!
+Pick a construction = 
+ # Requires translation!
+Queue empty = 
+ # Requires translation!
+Add to queue = 
+ # Requires translation!
+Remove from queue = 
 
 Diplomacy = Diplomasi
 War = Perang
