--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -5,7 +5,8 @@ Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup =
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Załóż miasto! \n>Wybierz Osadnika (ikona flagi) \n>Wybierz akcję 'Załóż miasto' (lewy dolny róg)
 Enter the city screen!\nClick the city button twice = Przejdź do panelu miasta! \n>Kliknij dwukrotnie na Miasto
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Wybierz technologię do odkrycia!\n>Wciśnij przycisk Wybierz Technologię (zielonawy, na górze po lewej) \n>Wybierz technologię a następnie wciśnij 'Opracuj'
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Wybierz budowlę! \n>Przejdź do panelu miasta \n>Wybierz jednostkę lub budowlę (lewa strona)
+ # Requires translation!
+Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = 
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Zakończ turę! \n>Przejdź przez jednostki klikając 'Następna jednostka' \n>Wciśnij 'Następna tura'
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Zmień pracujące pola!\n>Przejdź do panelu Miasta \n>Wskaż przypisane (zielone) pole by odznaczyć \n>Wskaż pole by przydzielić obywateli
 Meet another civilization!\nExplore the map until you encounter another civilization! = Spotkaj inną cywilizację! \n>Eksploruj świat do momentu napotkania nowej cywilizacji!
@@ -293,6 +294,19 @@ Requires a [buildingName] in all cities = [buildingName] musi znajdować się we
 Requires a [buildingName] in this city = Wymaga budynku [buildingName] w tym mieście
 Requires [resource] = Wymaga surowca [resource]
 Required tech: [requiredTech] = Wymaga odkrycia technologii [requiredTech]
+
+ # Requires translation!
+Current construction = 
+ # Requires translation!
+Construction queue = 
+ # Requires translation!
+Pick a construction = 
+ # Requires translation!
+Queue empty = 
+ # Requires translation!
+Add to queue = 
+ # Requires translation!
+Remove from queue = 
 
 Diplomacy = Dyplomacja
 War = Wojna
