--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -5,7 +5,8 @@ Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup =
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Заснуйте місто\nОберіть Поселенця (зі значком прапора) > \nНатисніть «Заснувати місто» (нижній лівий кут)
 Enter the city screen!\nClick the city button twice = Відкрийте екран міста!\nНатисніть на кнопку міста двічі
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Оберіть технологію для дослідження!\nНатисніть кнопку технологій (зеленувата, верхня ліва) > \n оберіть технологію > Натисніть «Дослідити» (нижня ліва)
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Оберіть будову!\nВідкрийте екран міста > Натисніть на підрозділ чи будівлю (ліворуч)
+ # Requires translation!
+Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = 
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Пропустіть хід!\nНатисніть багато разів «Наступний підрозділ» >\n Натисніть «Наступний хід»
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Перепризначте робочі клітинки!\nВідкрийте екран міста > натисніть на призначену (зелену) клітинку, щоб зробити непризначеною > \n натисніть на непризначену клітинку, щоб зробити призначеною
 Meet another civilization!\nExplore the map until you encounter another civilization! = Зустріньте іншу цивілізацію!\nДосліджуйте мапу до зустрічі з іншою цивілізацією!
@@ -293,6 +294,19 @@ Requires a [buildingName] in all cities = В усіх містах має бут
 Requires a [buildingName] in this city = У місті має бути будівля: [buildingName]
 Requires [resource] = Потрібен ресурс: [resource]
 Required tech: [requiredTech] = Потрібна технологія: [requiredTech]
+
+ # Requires translation!
+Current construction = 
+ # Requires translation!
+Construction queue = 
+ # Requires translation!
+Pick a construction = 
+ # Requires translation!
+Queue empty = 
+ # Requires translation!
+Add to queue = 
+ # Requires translation!
+Remove from queue = 
 
 Diplomacy = Дипломатія
 War = Війна
