--- a/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
@@ -5,7 +5,8 @@ Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup =
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = 建立城市!\n选择移民(旗帜图标) > 点击"建立城市"(左下角)
 Enter the city screen!\nClick the city button twice = 进入城市界面!\n点击城市按钮两次
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = 研究科技!\n点击科技按钮(左上方浅绿色图标) > \n选择一个科技 > 点击"研究"(右下角)
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = 建造/组建项目!\n进入城市界面 > 在左侧列表中选择一个单位或建筑
+ # Requires translation!
+Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = 
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = 跳过回合!\n连续点击"下个闲置单位"按钮跳过所有闲置单位 > 点击"下一回合"
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = 重新调整工作地块!\n进入城市界面 > 点击已分配市民的地块取消分配 > \n 点击未被分配市民的地块分配市民
 Meet another civilization!\nExplore the map until you encounter another civilization! = 认识其他文明!\n探索地图直到你遇见另一个文明!
@@ -294,6 +295,19 @@ Requires a [buildingName] in all cities = 需要所有城市建有[buildingName]
 Requires a [buildingName] in this city = 需要城市建有[buildingName]
 Requires [resource] = 需要资源：[resource]
 Required tech: [requiredTech] = 需要科技：[requiredTech]
+
+ # Requires translation!
+Current construction = 
+ # Requires translation!
+Construction queue = 
+ # Requires translation!
+Pick a construction = 
+ # Requires translation!
+Queue empty = 
+ # Requires translation!
+Add to queue = 
+ # Requires translation!
+Remove from queue = 
 
 Diplomacy = 外交
 War = 战争
