Fix city screen (#1657)
* Last CityScreen fix

* Atlas & Translations

--- a/android/assets/jsons/translationsByLanguage/Malay.properties
+++ b/android/assets/jsons/translationsByLanguage/Malay.properties
@@ -471,6 +471,10 @@ Queue empty =
 Add to queue = 
  # Requires translation!
 Remove from queue = 
+ # Requires translation!
+Show stats drilldown = 
+ # Requires translation!
+Show construction queue = 
 
 Diplomacy = Diplomasi
 War = Perang
