--- a/android/assets/jsons/translationsByLanguage/completionPercentages.properties
+++ b/android/assets/jsons/translationsByLanguage/completionPercentages.properties
@@ -1,7 +1,7 @@
 Traditional_Chinese = 95
 Italian = 99
-Polish = 99
 Russian = 99
+Polish = 98
 Romanian = 48
 Korean = 93
 Simplified_Chinese = 95
@@ -13,5 +13,5 @@ Portuguese = 82
 Indonesian = 74
 Czech = 95
 Malay = 13
-Spanish = 98
+Czech = 95
 Dutch = 25
