--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -519,6 +519,10 @@ Queue empty =
 Add to queue = 
  # Requires translation!
 Remove from queue = 
+ # Requires translation!
+Show stats drilldown = 
+ # Requires translation!
+Show construction queue = 
 
  # Requires translation!
 Diplomacy = 
