--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -312,6 +312,10 @@ Queue empty =
 Add to queue = 
  # Requires translation!
 Remove from queue = 
+ # Requires translation!
+Show stats drilldown = 
+ # Requires translation!
+Show construction queue = 
 
 Diplomacy = Diplomatie
 War = Krieg
