--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -1275,10 +1275,10 @@ Increases embarked movement +1 = +1 movimento delle unità imbarcate
 
 # Tech eras
 
-Ancient era = Antichità
+Ancient era = Antica
 Classical era = Classica
 Medieval era = Medievale
-Renaissance era = Rinascimento
+Renaissance era = Rinascimentale
 Industrial era = Industriale
 Modern era = Moderna
 Information era = Informatica
