Additional strings for translations are generated

--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -772,6 +772,8 @@ Victory status = Cesta k vítězství
 Social policies = Sociální politika
 Community = Komunita
 Close = Zavřít
+ # Requires translation!
+Do you want to exit the game? = 
 
 # City screen
 
