--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -757,6 +757,8 @@ Victory status = Conditions de victoire
 Social policies = Doctrines
 Community = Communauté
 Close = Fermer
+ # Requires translation!
+Do you want to exit the game? = 
 
 # City screen
 
