--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -775,6 +775,8 @@ Victory status = Siegesstatus
 Social policies = Sozialpolitiken
 Community = Gemeinschaft
 Close = Schließen
+ # Requires translation!
+Do you want to exit the game? = 
 
 # City screen
 
