--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -757,6 +757,8 @@ Victory status = Status zwycięstwa
 Social policies = Ustroje społeczne
 Community = Społeczność
 Close = Zamknij
+ # Requires translation!
+Do you want to exit the game? = 
 
 # City screen
 
