--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -1108,6 +1108,8 @@ Social policies = Politici sociale
  # Requires translation!
 Community = 
 Close = Închide
+ # Requires translation!
+Do you want to exit the game? = 
 
 # City screen
 
