--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -773,6 +773,8 @@ Victory status = Status kemenangan
 Social policies = Kebijakan sosial
 Community = Komunitas
 Close = Tutup
+ # Requires translation!
+Do you want to exit the game? = 
 
 # City screen
 
