--- a/android/assets/jsons/translationsByLanguage/Korean.properties
+++ b/android/assets/jsons/translationsByLanguage/Korean.properties
@@ -795,6 +795,8 @@ Victory status = 승리 조건 확인
 Social policies = 사회 정책
 Community = 커뮤니티
 Close = 닫기
+ # Requires translation!
+Do you want to exit the game? = 
 
 # City screen
 
