--- a/android/assets/jsons/translationsByLanguage/Malay.properties
+++ b/android/assets/jsons/translationsByLanguage/Malay.properties
@@ -1257,6 +1257,8 @@ Social policies =
 Community = 
  # Requires translation!
 Close = 
+ # Requires translation!
+Do you want to exit the game? = 
 
 # City screen
 
