--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -761,6 +761,8 @@ Victory status = Estado de victoria
 Social policies = Políticas sociales
 Community = Comunidad
 Close = Cerrar
+ # Requires translation!
+Do you want to exit the game? = 
 
 # City screen
 
