--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -307,6 +307,10 @@ Queue empty = Немає черги
 Add to queue = Додати до черги
  # Requires translation!
 Remove from queue = Видалити з черги
+ # Requires translation!
+Show stats drilldown = Показати статистику більш детально
+ # Requires translation!
+Show construction queue =  Показати чергу на побудову
 
 Diplomacy = Дипломатія
 War = Війна
@@ -1609,7 +1613,7 @@ Heal this Unit by 50 HP; Doing so will consume this opportunity to choose a Prom
 Medic = Медик I
 Medic II = Медик II
 This unit and all others in adjacent tiles heal 5 additional HP per turn = Підрозділ і сусіди отримують кожен хід здоровʼя +5
-This unit and all others in adjacent tiles heal 5 additional HP. This unit heals 5 additional HP outside of friendly territory. = Підрозділ і сусіди отримують кожен хід здоровʼя +5. Підрозділ  і сусіди отримують отримують додатково здоровʼя +5 поза дружньою територією.
+This unit and all others in adjacent tiles heal 5 additional HP. This unit heals 5 additional HP outside of friendly territory. = Підрозділ і сусіди отримують кожен хід здоровʼя +5. Підрозділ і сусіди отримують отримують додатково здоровʼя +5 поза дружньою територією.
 Targeting I (air) = Повітряна ціль I
 Targeting II (air) = Повітряна ціль II
 Targeting III (air) = Повітряна ціль III
