--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -623,6 +623,7 @@ Auto-build roads =
 Show minimap = 
 Show pixel units = 
 Show pixel improvements = 
+Autocomplete turn = 
 Enable nuclear weapons = 
 Fontset = 
 
