--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -353,7 +353,7 @@ Ally =  союзницькі
 
 You declared war on us! = Ви оголосили нам війну!
 Your warmongering ways are unacceptable to us. = Ваші войовничі способи неприйнятні для нас.
-You have captured our cities! = Ви захопили всі наші міста!
+You have captured our cities! = Ви захопили наші міста!
 We applaud your liberation of our conquered cities! = Ми плескаємо в долоні вашому звільненню наших завойованих міст!
 Years of peace have strengthened our relations. = Роки миру зміцнили наші відносини.
 Our mutual military struggle brings us closer together. = Наша взаємна військова боротьба зближує нас.
