--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -65,7 +65,7 @@ Burial Tomb = Гробниця
  # Requires translation!
 Doubles Gold given to enemy if city is captured = Ворог отримує подвійну кілкість золота, якщо місто було захоплено
  # Requires translation!
-Mud Pyramid Mosque = Глиняня піраміда мечеть
+Mud Pyramid Mosque = Глиняна пірамідальна мечеть
 
 The Oracle = Оракул
 'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = «Давній оракул сказав, що я наймудріший з греків. Бо я єдиний, хто знає, що нічого не знає.» - Сократ
@@ -713,7 +713,7 @@ Your relationship with [cityStateName] is about to degrade = Ваші стосу
 Your relationship with [cityStateName] degraded = Ваші стосунки з [cityStateName] погіршилися
 A new barbarian encampment has spawned! = З’явився новий варварський табір!
  # Requires translation!
-Received [goldAmount] Gold for capturing [cityName] = Відправлено [goldAmount] золота для захоплення міста [cityName]
+Received [goldAmount] Gold for capturing [cityName] = Отримано [goldAmount] золота за захоплення міста [cityName]
 
 # World Screen UI
 
