More romanian translations

--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -860,17 +860,12 @@ Our [$attackerName] was attacked by an intercepting [$interceptorName] =
 Our [$interceptorName] intercepted and attacked an enemy [$attackerName] = 
 An enemy [unit] was spotted near our territory = Un [unit] inamic a fost reperat în apropierea teritoriului nostru
 An enemy [unit] was spotted in our territory = Un [unit] inamic a fost reperat pe teritoriul nostru
- # Requires translation!
-[amount] enemy units were spotted near our territory = 
- # Requires translation!
-[amount] enemy units were spotted in our territory = 
+[amount] enemy units were spotted near our territory = [amount] unități inamice au fost detectate în aproprierea teritoriului nostru
+[amount] enemy units were spotted in our territory = [amount] unități inamice au fost detectate pe teritoriul nostru
 The civilization of [civName] has been destroyed! = Civilizația [civName] a fost distrusă!
- # Requires translation!
-The City-State of [name] has been destroyed! = 
- # Requires translation!
-We have captured a barbarian encampment and recovered [goldAmount] gold! = 
- # Requires translation!
-A barbarian [unitType] has joined us! = 
+The City-State of [name] has been destroyed! = Orașul-stat [name] a fost distrus!
+We have captured a barbarian encampment and recovered [goldAmount] gold! = Am capturat tabăra barbară și am luat [goldAmount] aur!
+A barbarian [unitType] has joined us! = Ni s-a alăturat un [unitType] barbar!
 We have found survivors in the ruins - population added to [cityName] = Am descoperit supraviețuitori printre ruine - populația a fost adăugată la [cityName]
 We have discovered the lost technology of [techName] in the ruins! = Am descoperit tehnologia pierdută [techName] printre ruine!
 A [unitName] has joined us! = Un [unitName] ni s-a alăturat!
@@ -878,25 +873,17 @@ An ancient tribe trains our [unitName] in their ways of combat! = Un trib străv
 We have found a stash of [amount] gold in the ruins! = Am descoperit un depozit de [amount] aur printre ruine!
  # Requires translation!
 We have found a crudely-drawn map in the ruins! = 
- # Requires translation!
-[unit] finished exploring. = 
- # Requires translation!
-[unit] has no work to do. = 
- # Requires translation!
-You're losing control of [name]. = 
+[unit] finished exploring. = [unit] a terminat explorarea.
+[unit] has no work to do. = [unit] nu mai are de lucru.
+You're losing control of [name]. = Pierzi controlul asupra [name].
 You and [name] are no longer friends! = Tu și [name] nu mai sunteți prieteni!
  # Requires translation!
 Your alliance with [name] is faltering. = 
- # Requires translation!
-You and [name] are no longer allies! = 
- # Requires translation!
-[civName] gave us a [unitName] as gift near [cityName]! = 
- # Requires translation!
-[civName] has denounced us! = 
- # Requires translation!
-[cityName] has been connected to your capital! = 
- # Requires translation!
-[cityName] has been disconnected from your capital! = 
+You and [name] are no longer allies! = Tu și [name] nu mai sunteți aliați!
+[civName] gave us a [unitName] as gift near [cityName]! = [civName] ne-a dăruit un [unitName] lângă [cityName]!
+[civName] has denounced us! = [civName] ne-a denunțat!
+[cityName] has been connected to your capital! = [cityName] a fost conectat la capitlă!
+[cityName] has been disconnected from your capital! = [cityName] a fost deconectat de capitală!
  # Requires translation!
 [civName] has accepted your trade request = 
  # Requires translation!
@@ -909,22 +896,16 @@ You and [name] are no longer allies! =
 One of our trades with [nation] has ended = 
  # Requires translation!
 One of our trades with [nation] has been cut short = 
- # Requires translation!
-[nation] agreed to stop settling cities near us! = 
- # Requires translation!
-[nation] refused to stop settling cities near us! = 
+[nation] agreed to stop settling cities near us! = [nation] acceptă să se oprească din a înființa noi orașe lângă noi!
+[nation] refused to stop settling cities near us! = [nation] refuză să se oprească din a înființa noi orașe lângă noi!
 We have allied with [nation]. = Ne-am aliat cu [nation].
 We have lost alliance with [nation]. = Am pierdut alianța cu [nation].
- # Requires translation!
-We have discovered [naturalWonder]! = 
- # Requires translation!
-We have received [goldAmount] Gold for discovering [naturalWonder] = 
+We have discovered [naturalWonder]! = Ai descoperit [naturalWonder]!
+We have received [goldAmount] Gold for discovering [naturalWonder] = Ai primit [goldAmount] aur pentru că ai descoperit [naturalWonder]
 Your relationship with [cityStateName] is about to degrade = Relația cu [cityStateName] este pe cale să se degradeze
 Your relationship with [cityStateName] degraded = Relația cu [cityStateName] s-a degradat
- # Requires translation!
-A new barbarian encampment has spawned! = 
- # Requires translation!
-Received [goldAmount] Gold for capturing [cityName] = 
+A new barbarian encampment has spawned! = A apărut o nouă tabără de barbari!
+Received [goldAmount] Gold for capturing [cityName] = Ai primit [goldAmount] aur pentru că ai capturat [cityName]
 
 # World Screen UI
 
@@ -947,8 +928,7 @@ Stop movement = Oprește mișcarea
 Construct improvement = Construiește îmbunătățire
 Automate = Automatizează
 Stop automation = Opriți automatizarea
- # Requires translation!
-Construct road = 
+Construct road = Construiește un drum
 Fortify = Fortifică
 Fortification = Fortificație
 Sleep = Dormi
@@ -965,10 +945,8 @@ Stop exploration = Oprește explorarea
 Pillage = Prădare
 Do you really want to disband this unit? = Sigur desființezi unitatea?
 Disband this unit for [goldAmount] gold? = Dezactivați această unitate pentru aurul [goldAmount]?
- # Requires translation!
-Create [improvement] = 
- # Requires translation!
-Start Golden Age = 
+Create [improvement] = Creează [improvement]
+Start Golden Age = Începe epoca de aur
 Yes = Da
 No = Nu
  # Requires translation!
@@ -1006,10 +984,8 @@ Pick construction = Alege construcția
 Pick improvement = 
  # Requires translation!
 Provides [resource] = 
- # Requires translation!
-Replaces [improvement] = 
- # Requires translation!
-Pick now! = 
+Replaces [improvement] = Înlocuiește: [improvement]
+Pick now! = Alege acum!
 Build [building] = Construiește [building]
 Train [unit] = Antrenează [unit]
 Produce [thingToProduce] = Produce [thingToProduce]
@@ -1021,8 +997,7 @@ Specialist Allocation = Alocarea specialiștilor
 Specialists = Specialiști
  # Requires translation!
 Food eaten = 
- # Requires translation!
-Growth bonus = 
+Growth bonus = Bonus de creștere
 Unassigned population = Populație liberă
 [turnsToExpansion] turns to expansion = [turnsToExpansion] rundă până la expansiunea
 Stopped expansion = Expansiunea sa oprit
@@ -1042,10 +1017,8 @@ Great person points =
  # Requires translation!
 Current points = 
 Points per turn = Puncte pe tură
- # Requires translation!
-Convert production to gold at a rate of 4 to 1 = 
- # Requires translation!
-Convert production to science at a rate of 4 to 1 = 
+Convert production to gold at a rate of 4 to 1 = Convertește producție în aur cu o rată de 4 la 1
+Convert production to science at a rate of 4 to 1 = Convertește producție în știință cu o rată de 4 la 1
  # Requires translation!
 The city will not produce anything. = 
 
@@ -1071,7 +1044,6 @@ City health = Sănătatea orașului
 Occupied! = Sub ocupație!
 Attack = Atac
 Bombard = Bombardare
- # Requires translation!
 NUKE = BOMBĂ NUCLEARĂ
 Captured! = Capturat!
  # Requires translation!
@@ -1134,16 +1106,11 @@ Cultural victory = Victorie culturală
 Conquest victory = Victorie militară
  # Requires translation!
 Complete all the spaceship parts\n to win! = 
- # Requires translation!
-Complete 5 policy branches\n to win! = 
- # Requires translation!
-Destroy all enemies\n to win! = 
- # Requires translation!
-You have won a scientific victory! = 
- # Requires translation!
-You have won a cultural victory! = 
- # Requires translation!
-You have won a domination victory! = 
+Complete 5 policy branches\n to win! = Completează 5 ramuri politice\n pentru a câștiga!
+Destroy all enemies\n to win! = Distruge toți inamicii\n pentru a câștiga!
+You have won a scientific victory! = Ai câștigat o victorie științifică!
+You have won a cultural victory! = Ai câștigat o victorie culturală!
+You have won a domination victory! = Ai câștigat o victorie militară!
  # Requires translation!
 You have achieved victory through the awesome power of your Culture. Your civilization's greatness - the magnificence of its monuments and the power of its artists - have astounded the world! Poets will honor you as long as beauty brings gladness to a weary heart. = 
  # Requires translation!
@@ -1160,17 +1127,14 @@ Our status = Statutul nostru
 Global status = Statutul global
  # Requires translation!
 Spaceship parts remaining = 
- # Requires translation!
-Branches completed = 
+Branches completed = Ramuri terminate
  # Requires translation!
 Undefeated civs = 
 
 # Capturing a city
 
- # Requires translation!
-What would you like to do with the city? = 
- # Requires translation!
-Annex = 
+What would you like to do with the city? = Ce dorești să faci cu orașul?
+Annex = Anexează
  # Requires translation!
 Annexed cities become part of your regular empire. = 
  # Requires translation!
@@ -1185,12 +1149,10 @@ You have no control over the the production of puppeted cities. =
 Puppeted cities also generate 25% less Gold and Science. = 
  # Requires translation!
 A puppeted city can be annexed at any time. = 
- # Requires translation!
-Liberate = 
+Liberate = Eliberează
  # Requires translation!
 Liberating a city returns it to its original owner, giving you a massive relationship boost with them! = 
- # Requires translation!
-Raze = 
+Raze = Distruge
  # Requires translation!
 Razing the city annexes it, and starts razing the city to the ground. = 
  # Requires translation!
@@ -1210,42 +1172,31 @@ Terrains = Terenuri
  # Requires translation!
 Tile Improvements = 
 Unique to [civName], replaces [unitName] = Unic pentru civilizație [civName], înlocuiește [unitName]
- # Requires translation!
-Tutorials = 
- # Requires translation!
-Cost = 
+Tutorials = Tutoriale
+Cost = Cost
  # Requires translation!
 May contain [listOfResources] = 
  # Requires translation!
 Upgrades to [upgradedUnit] = 
  # Requires translation!
 Obsolete with [obsoleteTech] = 
- # Requires translation!
-Occurs on [listOfTerrains] = 
+Occurs on [listOfTerrains] = Apare pe [listOfTerrains]
  # Requires translation!
 Placed on [terrainType] = 
- # Requires translation!
-Can be found on  = 
+Can be found on  = Se poate găsi pe
  # Requires translation!
 Improved by [improvement] = 
  # Requires translation!
 Bonus stats for improvement:  = 
- # Requires translation!
-Can be built on  = 
- # Requires translation!
-Defence bonus = 
- # Requires translation!
-Movement cost = 
+Can be built on  = Se poate construi pe
+Defence bonus = Bonus de apărare
+Movement cost = Cost de deplasare
  # Requires translation!
 Rough Terrain = 
- # Requires translation!
- for  = 
- # Requires translation!
-Missing translations: = 
- # Requires translation!
-Version = 
- # Requires translation!
-Resolution = 
+ for  =  pentru 
+Missing translations: = Traduceri lipsă:
+Version = Versiune
+Resolution = Rezoluție
  # Requires translation!
 Tileset = 
  # Requires translation!
@@ -1316,7 +1267,7 @@ Workers =
 # Other civilopedia things
 Nations = Națiuni
 Promotions = Promoţii
-Available for [unitTypes] = Valabil pentru [unitType]
+Available for [unitTypes] = Valabil pentru [unitTypes]
 
 # Policies
 
