--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -4,8 +4,7 @@
 Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = Перемістіть підрозділ!\nНатисніть на підрозділ > Натисніть на пункт призначення > Натисніть на стрілку
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Заснуйте місто\nОберіть Поселенця (зі значком прапора) > \nНатисніть «Заснувати місто» (нижній лівий кут)
 Enter the city screen!\nClick the city button twice = Відкрийте екран міста!\nНатисніть на кнопку міста двічі
-Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Оберіть технологію для дослідження!\nНатисніть кнопку технологій (зеленувата, верхня ліва) > \n оберіть технологію > Натисніть «Дослідити» (нижня ліва)
- # Requires translation!
+Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Оберіть технологію для дослідження!\nНатисніть кнопку технологій (зеленувата, верхня ліва) > \n оберіть технологію > Натисніть «Дослідити» (нижня права)
 Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = Оберіть будівництво!\nВідкрийте екран міста > Натисніть на підрозділ чи споруду (нижня ліва сторона) > \n натисніть «додати до черги»
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Пропустіть хід!\nНатисніть багато разів «Наступний підрозділ» >\n Натисніть «Наступний хід»
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Перепризначте робочі клітинки!\nВідкрийте екран міста > натисніть на призначену (зелену) клітинку, щоб зробити непризначеною > \n натисніть на непризначену клітинку, щоб зробити призначеною
