Fix for the "Back button can't end Unciv (#1513)" (#1661)
* Callback to exit the game by 'Back' button

* Prompt dialog for the game exit

* Additional strings for translations are generated

* Do not show exit prompt dialog twice

--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -1385,6 +1385,8 @@ Social policies =
 Community = 
  # Requires translation!
 Close = 
+ # Requires translation!
+Do you want to exit the game? = 
 
 # City screen
 
