--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -762,6 +762,8 @@ Victory status = Condizioni di vittoria
 Social policies = Politiche sociali
 Community = Community
 Close = Chiudi
+ # Requires translation!
+Do you want to exit the game? = 
 
 # City screen
 
