--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -833,6 +833,8 @@ Victory status = Status da vitória
 Social policies = Políticas sociais
 Community = Comunidade
 Close = Fechar
+ # Requires translation!
+Do you want to exit the game? = 
 
 # City screen
 
