--- a/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
@@ -791,6 +791,8 @@ Victory status = 胜利进度
 Social policies = 社会政策
 Community = 开发者社区
 Close = 关闭
+ # Requires translation!
+Do you want to exit the game? = 
 
 # City screen
 
