--- a/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
@@ -791,6 +791,8 @@ Victory status = 勝利進度
 Social policies = 社會政策
 Community = 社群
 Close = 關閉
+ # Requires translation!
+Do you want to exit the game? = 
 
 # City screen
 
