--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -775,6 +775,7 @@ Victory status = Статус перемоги
 Social policies = Соціальні інститути
 Community = Громада
 Close = Закрити
+Do you want to exit the game? = Ви бажаєте вийти з гри?
 
 # City screen
 
