--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -790,6 +790,8 @@ Victory status = Cesta k vítězství
 Social policies = Sociální politika
 Community = Komunita
 Close = Zavřít
+ # Requires translation!
+Do you want to exit the game? = 
 
 # City screen
 
