--- a/android/assets/jsons/translationsByLanguage/Dutch.properties
+++ b/android/assets/jsons/translationsByLanguage/Dutch.properties
@@ -1222,6 +1222,8 @@ Social policies = Sociaal beleid
  # Requires translation!
 Community = 
 Close = Sluiten
+ # Requires translation!
+Do you want to exit the game? = 
 
 # City screen
 
